[tool.poetry]
name = "relics-run-api"
version = "0.1.0"
description = "API for the Relics Run website."
authors = ["sehnryr <youn@melois.dev>"]
readme = "README.md"
packages = [{include = "relics_run_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
