[tool.poetry]
name = "relics-run-api"
version = "0.1.1"
description = "API for the Relics Run website."
authors = ["sehnryr <youn@melois.dev>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/sehnryr/relics-run-api"
keywords = ["relics-run", "api", "warframe"]
packages = [{include = "relics_run_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
